0027810: Compilation error on NCollection_UBTree::Kill()